infra/k8s/bundestagio-admin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bundestagio-admin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bundestagio-admin
  template:
    metadata:
      labels:
        app: bundestagio-admin
    spec:
      containers:
        - name: bundestagio-admin
          image: docker.pkg.github.com/demokratie-live/democracy-development/test-bundestag-admin:0.0.3
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: bundestagio-admin-srv
spec:
  selector:
    app: bundestagio-admin
  ports:
    - name: bundestagio-admin
      protocol: TCP
      port: 3000
      targetPort: 3000
