infra/k8s/bundestagio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bundestagio-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bundestagio
  template:
    metadata:
      labels:
        app: bundestagio
    spec:
      containers:
        - name: bundestagio
          image: docker.pkg.github.com/demokratie-live/democracy-development/test-bundestag-api:0.0.2
          livenessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 3100
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 3100
            initialDelaySeconds: 15
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: bundestagio-srv
spec:
  selector:
    app: bundestagio
  ports:
    - name: bundestagio
      protocol: TCP
      port: 3100
      targetPort: 3100
