infra/k8s/democracy-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democracy-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: democracy-api
  template:
    metadata:
      labels:
        app: democracy-api
    spec:
      containers:
        - name: democracy-api
          image: mananruck/democracy-api
---
apiVersion: v1
kind: Service
metadata:
  name: democracy-api-srv
spec:
  selector:
    app: democracy-api
  ports:
    - name: democracy-api
      protocol: TCP
      port: 3100
      targetPort: 3100
