infra/k8s/democracy-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democracy-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: democracy-app
  template:
    metadata:
      labels:
        app: democracy-app
    spec:
      containers:
        - name: democracy-app
          image: docker.pkg.github.com/demokratie-live/democracy-development/test-democracy-app:0.0.5
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: democracy-app-srv
spec:
  selector:
    app: democracy-app
  ports:
    - name: democracy-app
      protocol: TCP
      port: 3000
      targetPort: 3000
